--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+l.<!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
@@ -133,3 +133,4 @@ async function validateExcelRows(rows) {
 
 </body>
 </html>
+
